plugins {
    id 'java-library'
    id 'maven-publish'
}

allprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    group = rootProject.group
    version = rootProject.version

    repositories {
        mavenCentral()
    }
}

subprojects {
    dependencies {
        api "ch.qos.logback:logback-classic:$logback_version"
        api "cn.hutool:hutool-all:$hutool_version"
        api "com.google.code.gson:gson:$project.gson_version"
        api "com.alibaba.fastjson2:fastjson2:$fastjson_version"

        api "org.jetbrains:annotations:24.0.0"

        testImplementation platform('org.junit:junit-bom:5.10.0')
        testImplementation 'org.junit.jupiter:junit-jupiter'
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = "UTF-8"
        options.release.set(25)
    }

    test {
        useJUnitPlatform()
    }

    compileJava {
        options.compilerArgs += "-parameters"
    }

}
